final update EP3

--- a/EP3/actualite.html
+++ b/EP3/actualite.html
@@ -29,76 +29,118 @@
             </div>
             <div class="search"><input type="search" placeholder="rechercher"></div>
             <div class="menu">
-                <ul>
-                    <li><a class="accueil" href="index.html">accueil</a></li>
-                    <li><a class="mission" href="">mission</a></li>
-                    <li><a class="actualités" href="actualite.html">actualités</a></li>
-                    <li><a class="contacte" href="contact.html">contact</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a class="accueil" href="index.html">accueil</a></li>
+                        <li><a class="mission" href="">mission</a></li>
+                        <li><a class="actualités" href="actualite.html">actualités</a></li>
+                        <li><a class="contacte" href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
     <main>
-        <div class="banner"></div>
+        <div id="banner">
+            <div class="wrapper"></div>
+        </div>
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="actualite.html">Actualités</a></li>
             <li>Visite de travail a MEJ Benin</li>
         </ul>
-        <section class="text">
-            <h1>VISITE DE TRAVAIL A MEJ BENIN</h1>
-            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
-                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
-                veut
-                la sauce.</p>
-            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
-                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
-                veut
-                la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
-                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
-                veut
-                la sauce.</p>
-            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette quelque.</p>
-            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette.</p>
-            <p>Car et aussi car disruptif évidemment. Le client est très important merci, le
-                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
-                veut
-                la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
-                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
-                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
-                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
-                veut
-                la sauce.</p>
-            <div class="images">
-                <img src="img/photo1.jpg" alt="">
-                <img src="img/photo2.jpg" alt="">
-                <img src="img/photo3.jpg" alt="">
-                <img src="img/photo4.jpg" alt="">
-                <img src="img/photo5.jpg" alt="">
+        <div class="container">
+            <div>
+                <div class="text">
+                    <h1>VISITE DE TRAVAIL A MEJ BENIN</h1>
+                    <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important
+                        merci, le
+                        client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                        vallée
+                        veut
+                        la sauce.</p>
+                    <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important
+                        merci, le
+                        client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                        vallée
+                        veut
+                        la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage
+                        merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important
+                        merci, le
+                        client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                        vallée
+                        veut
+                        la sauce.</p>
+                    <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette quelque.</p>
+                    <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette.</p>
+                    <p>Car et aussi car disruptif évidemment. Le client est très important merci, le
+                        client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                        vallée
+                        veut
+                        la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage
+                        merde
+                        un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert
+                        épicé
+                        omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important
+                        merci, le
+                        client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                        vallée
+                        veut
+                        la sauce.</p>
+                </div>
+                <div class="images">
+                    <img src="img/photo1.jpg" alt="">
+                    <img src="img/photo2.jpg" alt="">
+                    <img src="img/photo3.jpg" alt="">
+                    <img src="img/photo4.jpg" alt="">
+                    <img src="img/photo5.jpg" alt="">
+                </div>
+                <div class="back">
+                    <p><a href="actualite.html">Retour aux actualités</a></p>
+                </div>
             </div>
             <div>
-                <p><a href="actualite.html">Retour aux actualités</a></p>
+                <div class="art-sim">
+                    <h2>Articles similaires</h2>
+                    <div>
+                        <img src="img/banner1.jpg" alt="">
+                        <div>
+                            <p>la sauce. Comme à la fait</p>
+                            <a href="#">lire l'article</a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/banner1.jpg" alt="">
+                        <div>
+                            <p>la sauce. Comme à la fait</p>
+                            <a href="#">lire l'article</a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/banner1.jpg" alt="">
+                        <div>
+                            <p>la sauce. Comme à la fait</p>
+                            <a href="#">lire l'article</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
-        <aside>
-            <div>
-                <h2>Articles similaires</h2>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </aside>
+        </div>
     </main>
     <footer>
         <div class="copyright">
