--- a/EP3/contact.html
+++ b/EP3/contact.html
@@ -29,12 +29,14 @@
             </div>
             <div class="search"><input type="search" placeholder="rechercher"></div>
             <div class="menu">
-                <ul>
-                    <li><a class="accueil" href="index.html">accueil</a></li>
-                    <li><a class="mission" href="">mission</a></li>
-                    <li><a class="actualités" href="actualite.html">actualités</a></li>
-                    <li><a class="contacte" href="contact.html">contact</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a class="accueil" href="index.html">accueil</a></li>
+                        <li><a class="mission" href="">mission</a></li>
+                        <li><a class="actualités" href="actualite.html">actualités</a></li>
+                        <li><a class="contacte" href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
@@ -59,10 +61,14 @@
                         <li><span class="fa fa-whatsapp"></span>Whatsapp</li>
                     </ul>
                     <ul>
-                        <li><address><a href="#">BP 46 Comé Dogbo, Benin</a></address></li>
+                        <li>
+                            <address><a href="#">BP 46 Comé Dogbo, Benin</a></address>
+                        </li>
                         <li><a href="#">+229 67 06 75 77</a></li>
                         <li><a href="mailto:directionmejb@gmail.com">directionmejb@gmail.com</a></li>
-                        <li><a href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/">https://www.facebook.com/profile.php?id=123</a></li>
+                        <li><a
+                                href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/">https://www.facebook.com/profile.php?id=123</a>
+                        </li>
                         <li><a href="https://wa.me/+22967067577">https://wa.me/+22967067577</a></li>
                     </ul>
                 </div>
