--- a/EP3/index.html
+++ b/EP3/index.html
@@ -29,12 +29,14 @@
             </div>
             <div class="search"><input type="search" placeholder="rechercher"></div>
             <div class="menu">
-                <ul>
-                    <li><a class="accueil" href="index.html">accueil</a></li>
-                    <li><a class="mission" href="">mission</a></li>
-                    <li><a class="actualités" href="actualite.html">actualités</a></li>
-                    <li><a class="contacte" href="contact.html">contact</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a class="accueil" href="index.html">accueil</a></li>
+                        <li><a class="mission" href="">mission</a></li>
+                        <li><a class="actualités" href="actualite.html">actualités</a></li>
+                        <li><a class="contacte" href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
